commerce replaced css, js, images

--- a/e_commerce/shop/templates/shop/samples/base_popup_menu.html
+++ b/e_commerce/shop/templates/shop/samples/base_popup_menu.html
@@ -39,9 +39,9 @@
             <hr style="height:1px; background-color:rgb(220,220,220); border:none; width:94%">
             <div class="main-icon-grey">
                 <div style="margin:10px">{% translate "Язык" %}</div>
-                <div class="menu-lang">
-                    {% include 'shop/samples/lang_selection.html' %}
-                </div>
+<!--                <div class="menu-lang">-->
+<!--                    {% include 'shop/samples/lang_selection.html' %}-->
+<!--                </div>-->
             </div>
             <hr style="height:1px; background-color:rgb(220,220,220); border:none; width:94%">
             <div class="main-icon-grey" style="margin:10px">{% translate "Информация о комании" %}</div>
