commerce refactor html with lang

--- a/e_commerce/shop/templates/shop/checkout.html
+++ b/e_commerce/shop/templates/shop/checkout.html
@@ -11,11 +11,11 @@
                 <div class="checkout-form">
                     {{ checkout_form.as_p }}
                 </div>
-                <button id="form-button" type="submit">{% translate "Оплатить" %}</button>
+                <button id="form-button" type="submit">{% translate "Оплатити" %}</button>
 
             </form>
             <div id="payment-info" class="checkout-payment">
-                <div>{% translate "Опции оплаты, PayPall" %}</div>
+                <div>{% translate "Опції оплати, PayPall" %}</div>
             </div>
 
 
