--- a/e_commerce/shop/templates/shop/search_results.html
+++ b/e_commerce/shop/templates/shop/search_results.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="main-info">
-    <h1>{% translate "Результаты поиска по запросу " %}"{{ query }}"</h1>
+    <h1>{% translate "Результат пошуку за запитом " %}"{{ query }}"</h1>
 
 {% include 'shop/samples/product_list.html' %}
 </div>
