--- a/e_commerce/shop/templates/shop/account.html
+++ b/e_commerce/shop/templates/shop/account.html
@@ -8,30 +8,30 @@
     {% csrf_token %}
     {{ form.as_p }}
     <div style="display:flex; flex-direction:row; justify-content:space-around">
-        <input type="submit" value={% translate "Подтвердить" %} class="filter-button" style="background-color:white">
-        <a href="{% url 'shop:password_change' %}" class="filter-button">{% translate "Сменить пароль" %}</a>
+        <input type="submit" value={% translate "Підтвердити" %} class="filter-button" style="background-color:white">
+        <a href="{% url 'shop:password_change' %}" class="filter-button">{% translate "Змінити пароль" %}</a>
     </div>
 </form>
-    <p style="margin:10px">{% translate "Архив покупок" %}</p>
-    <p style="margin:10px">{% translate "(все стоимости приведены в гривне)" %}</p>
+    <p style="margin:10px">{% translate "Архів купівель" %}</p>
+    <p style="margin:10px">{% translate "(всі ціни приведені в гривні)" %}</p>
 <div style="display:flex; flex-direction:column">
     <div class="account-order-label">
         <div class="account-order-and-sale">
-            <div>{% translate "Дата заказа" %}</div>
-            <div>{% translate "Дата продажи" %}</div>
+            <div>{% translate "Дата замовлення" %}</div>
+            <div>{% translate "Дата продажу" %}</div>
         </div>
         <div>
             <div class="account-orderitem">
-                <div class="account-orderitem-product-name">{% translate "Наименование продукта" %}</div>
+                <div class="account-orderitem-product-name">{% translate "Найменування товару" %}</div>
                 <div class="account-orderitem-product-info">
                     <div style="width:20px">{% translate "шт" %}</div>
-                    <div style="width:100px">{% translate "Цена" %}</div>
-                    <div style="width:100px">{% translate "Всего" %}</div>
+                    <div style="width:100px">{% translate "Ціна" %}</div>
+                    <div style="width:100px">{% translate "Всього" %}</div>
                 </div>
             </div>
         </div>
         <div style="20px">{% translate "шт" %}</div>
-        <div class="account-order-label-total">{% translate "Итого" %}</div>
+        <div class="account-order-label-total">{% translate "Загалом" %}</div>
     </div>
     {% for order in order_list %}
     {% if order.0.get_order_total %}
