--- a/e_commerce/shop/templates/shop/base.html
+++ b/e_commerce/shop/templates/shop/base.html
@@ -67,7 +67,7 @@
 
             <a id="m-icon" href="{% url 'shop:home' %}" class="main-icon">
                 <img class="menu-btn" src="{% static 'shop/images/main_icon.png' %}">
-                <div>BE SMART!</div>
+                <div>АМУНІЦІЯ ДЛЯ СВОЇХ</div>
             </a>
 
             {% include 'shop/samples/catalog_menu.html' %}
@@ -75,10 +75,6 @@
             <form class="menu-find" action="{% url 'shop:search_results' %}" method="get">
                 <input name="q" type="text" placeholder="Поиск..." size="40">
             </form>
-
-<!--            <div id="lang" class="menu-lang">-->
-<!--                {% include 'shop/samples/lang_selection.html' %}-->
-<!--            </div>-->
 
             {% if user.is_authenticated %}
                 <a href="{% url 'shop:user_account' user.id %}" class="menu-btn" style="text-decoration:none">{{ user }}</a>
