--- a/e_commerce/shop/templates/shop/samples/register_box.html
+++ b/e_commerce/shop/templates/shop/samples/register_box.html
@@ -7,7 +7,7 @@
         <!-- login window with shadowed all the screen -->
         <div id="log" class="window-login">
             <div class="form-title">
-                <h3>{% translate "Вход" %}</h3>
+                <h3>{% translate "Вхід" %}</h3>
                 <img class="menu-btn-close" src="{% static 'shop/images/black_close_icon.png' %}" width="15" height="15">
             </div>
             <form action="{% url 'shop:login' %}" method="post">
@@ -20,15 +20,15 @@
                 <input class="form" type="submit" value="Ok" style="display:flex; flex-direction:row; justify-content:center; width:60px">
             </form>
             <div class="form-title">
-                <div class="register">{% translate "Зарегистрироваться" %}</div>
-                <a href="{% url 'shop:password_reset' %}" style="text-decoration:none">{% translate "Напомнить пароль" %}</a>
+                <div class="register">{% translate "Зареєструватися" %}</div>
+                <a href="{% url 'shop:password_reset' %}" style="text-decoration:none">{% translate "Нагадати пароль" %}</a>
             </div>
         </div>
         <!-- end of login window -->
         <!-- registration window with shadowed all the screen -->
         <div id="reg" class="window-register">
             <div class="form-title">
-                <h3>{% translate "Регистрация" %}</h3>
+                <h3>{% translate "Реєстрація" %}</h3>
                 <img class="menu-btn-close" src="{% static 'shop/images/black_close_icon.png' %}" width="15" height="15">
             </div>
             <form action="{% url 'shop:registration' %}" method="post">
@@ -38,9 +38,9 @@
                     <div class="form"><label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}: </label>{{ f }}</div>
                     <div class="form-errors">{{ f.errors }}</div>
                 {% endfor %}
-                <input class="form" type="submit" value={% translate "Сохранить" %}>
+                <input class="form" type="submit" value={% translate "Зберегти" %}>
             </form>
-            <div class="sign-in">{% translate "Я уже зарегистрирован" %}</div>
+            <div class="sign-in">{% translate "Я вже зареєстрований" %}</div>
         </div>
         <!-- end of registration window -->
     </div>
