--- a/e_commerce/shop/templates/shop/samples/right_bar.html
+++ b/e_commerce/shop/templates/shop/samples/right_bar.html
@@ -24,14 +24,14 @@
     <hr style="height:1px; background-color:rgb(220,220,220); border:none; width:94%">
     <div class="filter">
 
-        {% translate "Фильтр" %}
+        {% translate "Фільтр" %}
         <form class="filter-main" style="flex-direction:column; min-width:none; width:auto" action="{% url 'shop:category' category.slug %}" method="post">
             {% csrf_token %}
             {{brand_filter_form.as_p }}
-            <div>{% translate "Цена" %}</div>
+            <div>{% translate "Ціна" %}</div>
             {{ price_filter_form.as_p }}
-            <input type="submit" value={% translate "Применить" %} style="width:100px; border:none; background-color:white; font-family:'Fira Code'; font-size:16px; cursor:pointer">
-            <a href="{% url 'shop:category' category.slug %}">{% translate "Сбросить" %}</a>
+            <input type="submit" value={% translate "Застосувати" %} style="width:100px; border:none; background-color:white; font-family:'Fira Code'; font-size:16px; cursor:pointer">
+            <a href="{% url 'shop:category' category.slug %}">{% translate "Скинути" %}</a>
         </form>
     </div>
     {% endif %}
@@ -42,23 +42,23 @@
     <hr style="height:1px; background-color:rgb(220,220,220); border:none; width:94%">
     <a href="{% url 'shop:contacts' %}">
         <img src="{% static 'shop/images/grey_question.png' %}" width="18" height="18">
-        <div style="margin-left:10px">{% translate "Справочный центр" %}</div>
+        <div style="margin-left:10px">{% translate "Довідковий центр" %}</div>
     </a>
     <hr style="height:1px; background-color:rgb(220,220,220); border:none; width:94%">
     <a href="{% url 'shop:delivery' %}">
         <img src="{% static 'shop/images/grey_stock.png' %}" width="18" height="18">
-        <div style="margin-left:10px">{% translate "Точки выдачи" %}</div>
+        <div style="margin-left:10px">{% translate "Точки видачі" %}</div>
     </a>
     <hr style="height:1px; background-color:rgb(220,220,220); border:none; width:94%">
     {% if not user.is_authenticated %}
         <div class="welcome">
-            <p>{% translate "Добро пожаловать!" %}</p>
-            <p>{% translate "Войдите, чтобы получать рекомендации, персональные бонусы и скидки" %}</p>
-            <button style="height:40px" id="registration">{% translate "Войдите в личный кабинет" %}</button>
+            <p>{% translate "Раді вітати!" %}</p>
+            <p>{% translate "Ввійдіть для того, щоб отримувати рекомендації, персональні бонуси та знижки" %}</p>
+            <button style="height:40px" id="registration">{% translate "Ввійдіть в особистий кабінет" %}</button>
         </div>
         <hr style="height:1px; background-color:rgb(220,220,220); border:none; width:94%">
     {% endif %}
-    <div class="main-icon-grey" style="margin:10px">{% translate "Мы в социальных сетях" %}</div>
+    <div class="main-icon-grey" style="margin:10px">{% translate "Ми в соціальних мережах" %}</div>
     <div class="main-icon" style="justify-content:space-around">
         <a href="https://uk-ua.facebook.com/" ><img src="{% static 'shop/images/Facebook.svg' %}" height="30" width="30"></a>
         <a href="https://www.instagram.com/" ><img src="{% static 'shop/images/Instagram.svg' %}" height="30" width="30"></a>
