commerce refactor ProductView, CategoryView, SuperCategoryView, CartView, changed style.css with ProductView

--- a/e_commerce/shop/static/shop/css/styles.css
+++ b/e_commerce/shop/static/shop/css/styles.css
@@ -397,7 +397,7 @@ html, body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: space-between;
 }
 .product-information {
     display: flex;
@@ -425,11 +425,11 @@ html, body {
     flex-direction: column;
     align-items: start;
     width: auto;
-    max-width: 40%;
-    margin-right: 20px;
+
 }
 .product-info-features-elem {
     height: 40px;
+    width: 250px;
 }
 .product-main-photo {
     margin-top: 10px;
@@ -1006,6 +1006,7 @@ $rad: 8px;
 /* product */
 .product-info-features-elem {
     height: 60px;
+    width: 200px;
 }
 .product-main-photo {
     max-width: 50%;
@@ -1100,6 +1101,7 @@ $rad: 8px;
 /* product */
 .product-info-features-elem {
     height: 100px;
+    width: 150px;
 }
 .title {
     font-size: 18px;
@@ -1118,7 +1120,7 @@ $rad: 8px;
 /* end account page */
 /* cart */
 .cart-head {
-    width: 380px;
+    width: 340px;
     box-shadow: 5px 5px 5px 5px rgb(200,200,200);
     margin-top: 20px;
     font-size: 10px;
