--- a/e_commerce/shop/templates/shop/samples/right_bar.html
+++ b/e_commerce/shop/templates/shop/samples/right_bar.html
@@ -13,8 +13,8 @@
     {% if category_flag %}
         {% for category in categories %}
                 <a href="{{ category.get_absolute_url }}">
-                    {% if category.picture %}
-                    <div><img src="{{ category.picture.url }}" style="width:auto; height:auto; max-width:20px; max-height:20px"></div>
+                    {% if category.icon %}
+                    <div><img src="{{ category.icon.url }}" style="width:auto; height:auto; max-width:20px; max-height:20px"></div>
                     {% endif %}
                     <div style="margin-left:10px">{{ category }}</div>
                 </a>
