--- a/e_commerce/shop/templates/shop/super_category.html
+++ b/e_commerce/shop/templates/shop/super_category.html
@@ -21,8 +21,8 @@
             {% for category in categories %}
                 <a href="{{ category.get_absolute_url }}">
                     <div>{{ category.name }}</div>
-                    {% if category.picture %}
-                        <img src="{{ category.picture.url }}" style="width:auto; height:auto; max-width:90%; max-height:80%">
+                    {% if category.icon %}
+                        <img src="{{ category.icon.url }}" style="width:auto; height:auto; max-width:90%; max-height:80%">
                     {% endif %}
                 </a>
             {% endfor %}
