--- a/e_commerce/shop/templates/shop/samples/page_data_bottom.html
+++ b/e_commerce/shop/templates/shop/samples/page_data_bottom.html
@@ -11,7 +11,7 @@
     {% endif %}
 
     {% if page_data.text_3 or page_data.image_3 %}
-        <div class="page-data-section-1">
+        <div class="page-data-section">
             {% if page_data.text_3 %}
                 <div class="page-data-text">
                     {{ page_data.text_3 }}
