--- a/e_commerce/shop/templates/shop/samples/page_data_top.html
+++ b/e_commerce/shop/templates/shop/samples/page_data_top.html
@@ -10,7 +10,7 @@
     {% endif %}
 
     {% if page_data.text_1 or page_data.image_1 %}
-        <div class="page-data-section-1">
+        <div class="page-data-section">
             {% if page_data.text_1 %}
                 <div class="page-data-text">
                     {{ page_data.text_1 }}
@@ -33,7 +33,7 @@
     {% endif %}
 
     {% if page_data.text_2 or page_data.image_2 %}
-        <div class="page-data-section-1">
+        <div class="page-data-section">
             {% if page_data.text_2 %}
                 <div class="page-data-text">
                     {{ page_data.text_2 }}
