--- a/e_commerce/shop/static/shop/css/styles.css
+++ b/e_commerce/shop/static/shop/css/styles.css
@@ -86,6 +86,8 @@ html, body {
     width: 100%;
     height: 50px;
     background: #3E3D53;
+    position: sticky;
+    top: 0px;
 }
 .main-icon {
     display: flex;
