--- a/e_commerce/shop/templates/shop/other/for_partners.html
+++ b/e_commerce/shop/templates/shop/other/for_partners.html
@@ -7,6 +7,7 @@
     {% include 'shop/samples/right_bar_small.html' %}
     </div>
     <div class="main-info">
+        <div class="title">{{ title }}</div>
         {% include 'shop/samples/page_data_top.html' %}
         {% include 'shop/samples/page_data_bottom.html' %}
     </div>
