With_tests changed date and datetime fields to _at and _date convention in account.html, admin, querysets.py, views.py

--- a/e_commerce/shop/templates/shop/account.html
+++ b/e_commerce/shop/templates/shop/account.html
@@ -37,7 +37,7 @@
     {% if order.0.get_order_total %}
     <div class="account-order">
         <div class="account-order-and-sale">
-            <div>{{ order.0.date_ordered }}</div>
+            <div>{{ order.0.ordered_at }}</div>
             <div>{{ order.1 }}</div>
         </div>
         <div style="display:flex; flex-direction:column">
