--- a/e_commerce/shop/templates/a_shop/home.html
+++ b/e_commerce/shop/templates/a_shop/home.html
@@ -1,2 +1,15 @@
-
+{% extends 'a_shop/base.html' %}
 {% load static %}
+{% load shop_tags %}
+
+{% block content %}
+{% include 'shop/samples/right_bar.html' %}
+    <div class="main-info">
+        <div class="title">{{ title }}</div>
+        {% include 'shop/samples/page_data_top.html' %}
+        {% include 'shop/samples/product_list.html' %}
+        {% include 'shop/samples/page_data_bottom.html' %}
+    </div>
+    {{ cartJson|json_script:"cartJson" }}
+    <script type="text/javascript" src="{%static 'shop/js/addCookieCart.js' %}"></script>
+{% endblock %}
