--- a/e_commerce/shop/templates/a_shop/base.html
+++ b/e_commerce/shop/templates/a_shop/base.html
@@ -16,6 +16,7 @@
         {% include 'a_shop/samples/navbar.html' %}
         {% include 'a_shop/samples/login_modal.html' %}
         {% include 'a_shop/samples/register_modal.html' %}
+        {% include 'a_shop/samples/offcanvas.html' %}
         {% block content %}
         {% endblock %}
     <script type="text/javascript" src="{% static 'shop/js/cart.js' %}"></script>
