--- a/e_commerce/shop/templates/a_shop/samples/login_modal.html
+++ b/e_commerce/shop/templates/a_shop/samples/login_modal.html
@@ -1,17 +1,30 @@
 {% load static %}
 
-<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+<div
+        class="modal fade"
+        id="loginModal"
+        tabindex="-1"
+        aria-labelledby="loginModalLabel"
+        aria-hidden="true"
+>
   <div class="modal-dialog">
     <form class="modal-content" action="{% url 'shop:login' %}" method="post">
       <div class="modal-header w-100">
         <h1 class="modal-title fs-5" id="loginModalLabel">Вхід</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+        ></button>
       </div>
       <div class="modal-body d-flex flex-column">
                 {% csrf_token %}
                 <div class="form-errors">{{ user_login_form.non_field_errors }}</div>
                 {% for f in user_login_form %}
-                    <label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}: </label>{{ f }}
+                    <label class="form-label" for="{{ f.id_for_label }}">
+                        {{ f.label }}:
+                    </label>{{ f }}
                     <div class="form-errors">{{ f.errors }}</div>
                 {% endfor %}
             <a class="btn btn-secondary mt-2" href="{% url 'shop:password_reset' %}">
@@ -19,7 +32,12 @@
             </a>
       </div>
       <div class="modal-footer d-flex justify-content-between">
-          <div class="btn btn-secondary" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#registerModal">Зареєструватися</div>
+          <div
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                  data-bs-toggle="modal"
+                  data-bs-target="#registerModal"
+          >Зареєструватися</div>
         <button type="submit" class="btn btn-secondary" data-bs-dismiss="modal">Ok</button>
       </div>
     </form>
