new_frontend refactor offcanvas.html, home.html, added select_related category to phoduct_home queryset.py

--- a/e_commerce/shop/templates/a_shop/home.html
+++ b/e_commerce/shop/templates/a_shop/home.html
@@ -3,12 +3,15 @@
 {% load shop_tags %}
 
 {% block content %}
-{% include 'shop/samples/right_bar.html' %}
-    <div class="main-info">
-        <div class="title">{{ title }}</div>
-        {% include 'shop/samples/page_data_top.html' %}
-        {% include 'shop/samples/product_list.html' %}
-        {% include 'shop/samples/page_data_bottom.html' %}
+    <div class="w-100 d-flex flex-row align-items-start">
+            <div class="col-lg-4 col-xl-3 d-none d-lg-block">
+                {% include 'a_shop/samples/right_bar.html' %}
+            </div>
+            <div class="col-12 col-lg-8 col-xl-9">
+                {% include 'a_shop/samples/page_data_top.html' %}
+                {% include 'a_shop/samples/product_list.html' %}
+                {% include 'a_shop/samples/page_data_bottom.html' %}
+            </div>
     </div>
     {{ cartJson|json_script:"cartJson" }}
     <script type="text/javascript" src="{%static 'shop/js/addCookieCart.js' %}"></script>
